--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,9 @@ dependencies = [
   "scikit-image>=0.18.3",
   "lmfit>=1.0.2",
 ]
-
+[tool.setuptools.packages.find]
+include = ["SMS_BP*"]
+exclude = ["docs*", "tests*"]
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
