--- a/SMS_BP.yml
+++ b/SMS_BP.yml
@@ -3,14 +3,127 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.10
-  - scipy
-  - matplotlib
-  - pandas
-  - scikit-learn
-  - ipykernel
-  - shapely
-  - scikit-image
-  - gast
-  - lmfit
-prefix: /Users/baljyot/opt/anaconda3/envs/SMT_env_BP
+  - aom=3.6.0=h313beb8_0
+  - appnope=0.1.2=py310hca03da5_1001
+  - asteval=0.9.31=pyhd8ed1ab_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - blas=2.116=openblas
+  - blas-devel=3.9.0=16_osxarm64_openblas
+  - blosc=1.21.3=h313beb8_0
+  - brotli=1.0.9=h1a28f6b_7
+  - brotli-bin=1.0.9=h1a28f6b_7
+  - brunsli=0.1=hc377ac9_1
+  - bzip2=1.0.8=h80987f9_5
+  - c-ares=1.19.1=h80987f9_0
+  - ca-certificates=2023.12.12=hca03da5_0
+  - cfitsio=3.470=h7f6438f_7
+  - charls=2.2.0=hc377ac9_0
+  - comm=0.2.1=py310hca03da5_0
+  - contourpy=1.2.0=py310h48ca7d4_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dav1d=1.2.1=h80987f9_0
+  - debugpy=1.6.7=py310h313beb8_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - exceptiongroup=1.2.0=py310hca03da5_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.12.1=h1192e45_0
+  - future=0.18.3=py310hca03da5_0
+  - gast=0.5.3=pyhd3eb1b0_0
+  - giflib=5.2.1=h80987f9_3
+  - imagecodecs=2023.1.23=py310h604db08_0
+  - imageio=2.33.1=py310hca03da5_0
+  - ipykernel=6.28.0=py310hca03da5_0
+  - ipython=8.20.0=py310hca03da5_0
+  - jedi=0.18.1=py310hca03da5_1
+  - jpeg=9e=h80987f9_1
+  - jupyter_client=8.6.0=py310hca03da5_0
+  - jupyter_core=5.5.0=py310hca03da5_0
+  - jxrlib=1.1=h1a28f6b_2
+  - kiwisolver=1.4.4=py310h313beb8_0
+  - krb5=1.20.1=hf3e1bf2_1
+  - lazy_loader=0.3=py310hca03da5_0
+  - lcms2=2.12=hba8e193_0
+  - lerc=3.0=hc377ac9_0
+  - libaec=1.0.4=hc377ac9_1
+  - libavif=0.11.1=h80987f9_0
+  - libblas=3.9.0=16_osxarm64_openblas
+  - libbrotlicommon=1.0.9=h1a28f6b_7
+  - libbrotlidec=1.0.9=h1a28f6b_7
+  - libbrotlienc=1.0.9=h1a28f6b_7
+  - libcblas=3.9.0=16_osxarm64_openblas
+  - libcurl=8.5.0=h3e2b118_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.17=h80987f9_1
+  - libedit=3.1.20230828=h80987f9_0
+  - libev=4.33=h1a28f6b_1
+  - libffi=3.4.4=hca03da5_0
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - liblapack=3.9.0=16_osxarm64_openblas
+  - liblapacke=3.9.0=16_osxarm64_openblas
+  - libnghttp2=1.57.0=h62f6fdd_0
+  - libopenblas=0.3.21=openmp_hc731615_3
+  - libpng=1.6.39=h80987f9_0
+  - libsodium=1.0.18=h1a28f6b_0
+  - libssh2=1.10.0=h02f6b3c_2
+  - libtiff=4.5.1=h313beb8_0
+  - libwebp-base=1.3.2=h80987f9_0
+  - libzopfli=1.0.3=hc377ac9_0
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - lmfit=1.2.2=pyhd8ed1ab_1
+  - lz4-c=1.9.4=h313beb8_0
+  - matplotlib=3.8.0=py310hca03da5_0
+  - matplotlib-base=3.8.0=py310h46d7db6_0
+  - matplotlib-inline=0.1.6=py310hca03da5_0
+  - munkres=1.1.4=py_0
+  - ncurses=6.4=h313beb8_0
+  - nest-asyncio=1.6.0=py310hca03da5_0
+  - networkx=3.1=py310hca03da5_0
+  - numpy=1.26.4=py310h3b2db8e_0
+  - numpy-base=1.26.4=py310ha9811e2_0
+  - openblas=0.3.21=openmp_hf78f355_3
+  - openjpeg=2.3.0=h7a6adac_2
+  - openssl=3.0.13=h1a28f6b_0
+  - packaging=23.1=py310hca03da5_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pillow=10.2.0=py310h80987f9_0
+  - pip=23.3.1=py310hca03da5_0
+  - platformdirs=3.10.0=py310hca03da5_0
+  - prompt-toolkit=3.0.43=py310hca03da5_0
+  - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - psutil=5.9.0=py310h1a28f6b_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pygments=2.15.1=py310hca03da5_1
+  - pyparsing=3.0.9=py310hca03da5_0
+  - python=3.10.13=hb885b13_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - pyzmq=25.1.2=py310h313beb8_0
+  - readline=8.2=h1a28f6b_0
+  - scikit-image=0.22.0=py310h46d7db6_0
+  - scipy=1.11.4=py310h20cbe94_0
+  - setuptools=68.2.2=py310hca03da5_0
+  - setuptools-scm=8.0.4=py310hca03da5_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.10=h313beb8_1
+  - sqlite=3.41.2=h80987f9_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tifffile=2023.4.12=py310hca03da5_0
+  - tk=8.6.12=hb8d0fd4_0
+  - tomli=2.0.1=py310hca03da5_0
+  - tornado=6.3.3=py310h80987f9_0
+  - traitlets=5.7.1=py310hca03da5_0
+  - typing-extensions=4.9.0=py310hca03da5_1
+  - typing_extensions=4.9.0=py310hca03da5_1
+  - tzdata=2024a=h04d1e81_0
+  - uncertainties=3.1.7=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.41.2=py310hca03da5_0
+  - xz=5.4.6=h80987f9_0
+  - zeromq=4.3.5=h313beb8_0
+  - zfp=1.0.0=h313beb8_0
+  - zlib=1.2.13=h5a0b063_0
+  - zstd=1.5.5=hd90d995_0
+prefix: /Users/baljyot/opt/anaconda3/envs/SMS_BP
