--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,9 @@ dependencies = [
   "numpy>=1.21.2",
   "matplotlib>=3.6.0",
   "scipy>=1.7.1",
-  "pandas>=1.3.3",
-  "scikit-learn>=1.0",
   "scikit-image>=0.18.3",
-  "lmfit>=1.0.2",
+  "fbm>=0.3.0",
+  "Pillow==9.4.0"
 ]
 [tool.setuptools.packages.find]
 include = ["SMS_BP*"]
