FEATURE: changed transition matrix input from rate to probability

--- a/SMS_BP/sim_config.json
+++ b/SMS_BP/sim_config.json
@@ -15,26 +15,27 @@
         "track_type":"fbm",
         "track_length_mean":450,
         "track_distribution":"constant",
-        "diffusion_coefficient":[0.1,0.5],
+        "diffusion_coefficient":[0.001,4],
         "diffusion_track_amount":[
             0.5,0.5
         ],
-        "hurst_exponent":[0.2,0.5],
+        "hurst_exponent":[0.5],
         "hurst_track_amount":[
-            0.5,0.5
+            0.5
         ],
         "allow_transition_probability":true,
-        "diffusion_transition_matrix":[[0.1,0.5],[0.5,0.1]],
-        "hurst_transition_matrix":[[0.1,0.5],[0.5,0.1]],
+        "transition_matrix_time_step":20,
+        "diffusion_transition_matrix":[[0.1,0.9],[0.9,0.1]],
+        "hurst_transition_matrix":[0.1],
         "state_probability_diffusion":[0.5,0.5],
-        "state_probability_hurst":[0.5,0.5]
+        "state_probability_hurst":[1]
     },
     "Global_Parameters":{
         "field_of_view_dim":[80,80],
         "frame_count":500,
         "exposure_time":20,
         "interval_time":0,
-        "oversample_motion_time":20,
+        "oversample_motion_time":10,
         "pixel_size":0.13,
         "axial_detection_range":0.4,
         "base_noise":140,
