DOCS: Added mkdocs documentation with appropriate package management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "scikit-image>=0.18.3",
   "fbm>=0.3.0",
   "Pillow==9.4.0"
+  "mkdocs==1.6.0"
 ]
 [tool.setuptools.packages.find]
 include = ["SMS_BP*"]
