--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
   "scipy>=1.7.1",
   "scikit-image>=0.18.3",
   "fbm>=0.3.0",
-  "Pillow==9.4.0"
+  "Pillow==9.4.0",
   "mkdocs==1.6.0"
 ]
 [tool.setuptools.packages.find]
