--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "SMS_BP"
 
-version = "0.1.4"
+version = "0.1.5"
 
 description = "Single Molecule Simulations and Microscopy Simulations developed for the Weber Lab by Baljyot Singh Parmar"
 
@@ -9,16 +9,16 @@ readme = "README.md"
 
 requires-python = ">=3.10"
 
-license = {file = "LICENSE"}
+license = { file = "LICENSE.md" }
 
 keywords = ["SMS"]
 
 authors = [
-  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }
+  { name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" },
 ]
 
 maintainers = [
-  {name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }
+  { name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" },
 ]
 
 dependencies = [
@@ -27,17 +27,15 @@ dependencies = [
   "scipy>=1.7.1",
   "scikit-image>=0.18.3",
   "Pillow==9.4.0",
-  "mkdocs==1.6.0"
+  "mkdocs==1.6.0",
 ]
 
 [tool.setuptools.packages.find]
-include = ["SMS_BP*"]
 exclude = ["docs*", "tests*"]
 
 [build-system]
-requires = ["setuptools>=43.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 [project.scripts]
 run_SMS_BP = "SMS_BP.run_cell_simulation:main_CLI"
 SMS_BP_config = "SMS_BP.run_cell_simulation:create_config"
