--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,14 @@ dependencies = [
 [tool.setuptools.packages.find]
 exclude = ["docs*", "tests*"]
 
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
 [project.scripts]
 run_SMS_BP = "SMS_BP.run_cell_simulation:main_CLI"
 SMS_BP_config = "SMS_BP.run_cell_simulation:create_config"
