--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,12 @@ dependencies = [
 venvPath = "."
 venv = ".venv"
 
+[tool.uv]
+dev-dependencies = [
+    "mkdocs==1.6.0",
+    "pymdown-extensions>=10.11",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
