--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "SMS_BP"
 
-version = "0.1.62"
+version = "0.1.63"
 
 description = "Single Molecule Simulations and Microscopy Simulations developed for the Weber Lab by Baljyot Singh Parmar"
 
@@ -34,10 +34,7 @@ venvPath = "."
 venv = ".venv"
 
 [tool.uv]
-dev-dependencies = [
-    "mkdocs==1.6.0",
-    "pymdown-extensions>=10.11",
-]
+dev-dependencies = ["mkdocs==1.6.0", "pymdown-extensions>=10.11"]
 
 [build-system]
 requires = ["hatchling"]
