--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "SMS_BP"
 
-version = "0.1.65"
+dynamic = ["version"]
 
 description = "Single Molecule Simulations and Microscopy Simulations developed for the Weber Lab by Baljyot Singh Parmar"
 
@@ -30,6 +30,10 @@ dependencies = [
   "typer>=0.12.5",
 ]
 
+[project.urls]
+Documentation = "https://joemans3.github.io/SMS_BP/"
+"Source code" = "https://github.com/joemans3/SMS_BP"
+
 [tool.pyright]
 venvPath = "."
 venv = ".venv"
@@ -41,6 +45,9 @@ dev-dependencies = ["mkdocs==1.6.0", "pymdown-extensions>=10.11"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.version]
+path = "src/SMS_BP/__init__.py"
+
 [project.scripts]
-run_SMS_BP = "SMS_BP.run_cell_simulation:main_CLI"
-SMS_BP_config = "SMS_BP.run_cell_simulation:create_config"
+run_SMS_BP = "SMS_BP.run_cell_simulation:typer_app_sms_bp"
+
