--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,7 @@ dependencies = [
   "matplotlib>=3.6.0",
   "scipy>=1.7.1",
   "scikit-image>=0.18.3",
-  "mkdocs==1.6.0",
   "typer>=0.12.5",
-  "sms-bp",
 ]
 
 [project.urls]
@@ -40,7 +38,13 @@ venvPath = "."
 venv = ".venv"
 
 [tool.uv]
-dev-dependencies = ["mkdocs==1.6.0", "pymdown-extensions>=10.11"]
+dev-dependencies = [
+  "mkdocs==1.6.0",
+  "pymdown-extensions>=10.11",
+  "pyright>=1.1.384",
+  "pytest>=8.3.3",
+  "ruff>=0.6.9",
+]
 
 [tool.uv.sources]
 sms-bp = { workspace = true }
