--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,19 +18,18 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest ruff
-    - name: Lint and Format with ruff
-      run: |
-        ruff check
-        ruff format
-    - name: Test with pytest
-      run: pytest
+    steps:     
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}      
+      - name: Install dependencies
+        run: uv sync --all-extras
+      - name: Lint and Format with ruff
+        run: |
+          uv run ruff check
+          uv run ruff format
+      - name: Test with pytest
+        run: uv run pytest
