--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ venv = ".venv"
 
 [tool.uv]
 dev-dependencies = [
-  "mkdocs==1.6.0",
+  "mkdocs-material==9.5.40",
   "pymdown-extensions>=10.11",
   "pyright>=1.1.384",
   "pytest>=8.3.3",
