fix: changed actions for repo only auth

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,4 +30,4 @@ jobs:
           mkdocs build
           mkdocs gh-deploy --force
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SMS_BP_CI_GH }}
