--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,10 @@
 name: CI
-on: push
+on: 
+  push:
+    branch:
+      - "master"
+    paths-ignore:
+      - "docs/**"
 jobs:
   build:
     runs-on: ubuntu-latest
