--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs mkdocs-material pymdown-extensions mkdocstrings-python
+
+      - run: python -m pip install -e .
       - name: Build and deploy
         run: |
           cd docs
