--- a/src/SMS_BP/sim_config.json
+++ b/src/SMS_BP/sim_config.json
@@ -26,7 +26,7 @@
         "allow_transition_probability":true,
         "transition_matrix_time_step":20,
         "diffusion_transition_matrix":[[0.992,0.008],[0.0273,0.9727]],
-        "hurst_transition_matrix":[[0.1,0.1],[0.1,0.1]],
+        "hurst_transition_matrix":[[0.1]],
         "state_probability_diffusion":[0.5,0.5],
         "state_probability_hurst":[1]
     },
