fix: formatting and version bump

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Run Ruff
         run: |
           ruff check --fix
+          ruff format
           ruff format --check --diff
