--- a/SMS_BP.yml
+++ b/SMS_BP.yml
@@ -3,7 +3,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.10.13
+  - python>=3.12
   - setuptools
   - setuptools-scm
   - pip:
