build: python version to 3.12

--- a/SMS_BP.yml
+++ b/SMS_BP.yml
@@ -3,8 +3,5 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python>=3.12
-  - setuptools
-  - setuptools-scm
-  - pip:
-    - -r requirements.txt
+  - python==3.12
+  - pip
