--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 #    uv pip compile pyproject.toml -o requirements.txt
 annotated-types==0.7.0
     # via pydantic
-attrs==24.2.0
+attrs==25.3.0
     # via
     #   jsonschema
     #   referencing
@@ -12,79 +12,35 @@ certifi==2025.1.31
     # via requests
 charset-normalizer==3.4.1
     # via requests
-click==8.1.7
-    # via
-    #   mkdocs
-    #   mkdocstrings
-    #   typer
-colorama==0.4.6
-    # via griffe
-contourpy==1.3.0
+click==8.1.8
+    # via typer
+contourpy==1.3.1
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
-fonttools==4.54.1
+fonttools==4.56.0
     # via matplotlib
-ghp-import==2.1.0
-    # via mkdocs
-griffe==1.4.1
-    # via mkdocstrings-python
 idna==3.10
     # via requests
-imageio==2.35.1
+imageio==2.37.0
     # via scikit-image
-jinja2==3.1.4
-    # via
-    #   mkdocs
-    #   mkdocstrings
 jsonschema==4.23.0
     # via sms-bp (pyproject.toml)
 jsonschema-specifications==2024.10.1
     # via jsonschema
-kiwisolver==1.4.7
+kiwisolver==1.4.8
     # via matplotlib
 lazy-loader==0.4
     # via scikit-image
-markdown==3.7
-    # via
-    #   mkdocs
-    #   mkdocs-autorefs
-    #   mkdocstrings
-    #   pymdown-extensions
 markdown-it-py==3.0.0
     # via rich
-markupsafe==2.1.5
+matplotlib==3.10.1
     # via
-    #   jinja2
-    #   mkdocs
-    #   mkdocs-autorefs
-    #   mkdocstrings
-matplotlib==3.9.2
-    # via
-    #   sms-bp (pyproject.toml)
     #   pyvista
     #   vtk
 mdurl==0.1.2
     # via markdown-it-py
-mergedeep==1.3.4
-    # via
-    #   mkdocs
-    #   mkdocs-get-deps
-mkdocs==1.6.0
-    # via
-    #   mkdocs-autorefs
-    #   mkdocstrings
-mkdocs-autorefs==1.2.0
-    # via
-    #   mkdocstrings
-    #   mkdocstrings-python
-mkdocs-get-deps==0.2.0
-    # via mkdocs
-mkdocstrings==0.26.2
-    # via mkdocstrings-python
-mkdocstrings-python==1.12.1
-    # via sms-bp (pyproject.toml)
-networkx==3.3
+networkx==3.4.2
     # via scikit-image
 numpy==2.2.4
     # via
@@ -97,65 +53,47 @@ numpy==2.2.4
     #   scikit-image
     #   scipy
     #   tifffile
-packaging==24.1
+packaging==24.2
     # via
     #   lazy-loader
     #   matplotlib
-    #   mkdocs
     #   pooch
     #   scikit-image
-pathspec==0.12.1
-    # via mkdocs
-pillow==10.4.0
+pillow==11.2.0
     # via
     #   imageio
     #   matplotlib
     #   pyvista
     #   scikit-image
-platformdirs==4.3.6
-    # via
-    #   mkdocs-get-deps
-    #   mkdocstrings
-    #   pooch
+platformdirs==4.3.7
+    # via pooch
 pooch==1.8.2
     # via pyvista
 pydantic==2.11.1
     # via sms-bp (pyproject.toml)
 pydantic-core==2.33.0
     # via pydantic
-pygments==2.18.0
+pygments==2.19.1
     # via rich
-pymdown-extensions==10.11.2
-    # via mkdocstrings
-pyparsing==3.1.4
+pyparsing==3.2.3
     # via matplotlib
 python-dateutil==2.9.0.post0
-    # via
-    #   ghp-import
-    #   matplotlib
+    # via matplotlib
 pyvista==0.44.2
     # via boundedfbm
-pyyaml==6.0.2
-    # via
-    #   mkdocs
-    #   mkdocs-get-deps
-    #   pymdown-extensions
-    #   pyyaml-env-tag
-pyyaml-env-tag==0.1
-    # via mkdocs
-referencing==0.35.1
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.3
     # via pooch
-rich==13.9.2
+rich==14.0.0
     # via typer
-rpds-py==0.20.0
+rpds-py==0.24.0
     # via
     #   jsonschema
     #   referencing
-scikit-image==0.24.0
+scikit-image==0.25.2
     # via sms-bp (pyproject.toml)
 scipy==1.15.2
     # via
@@ -166,18 +104,19 @@ scooby==0.10.0
     # via pyvista
 shellingham==1.5.4
     # via typer
-six==1.16.0
+six==1.17.0
     # via python-dateutil
-tifffile==2024.9.20
+tifffile==2025.3.30
     # via scikit-image
-typer==0.12.5
+typer==0.15.2
     # via sms-bp (pyproject.toml)
-typing-extensions==4.12.2
+typing-extensions==4.13.0
     # via
     #   boundedfbm
     #   pydantic
     #   pydantic-core
     #   pyvista
+    #   referencing
     #   typer
     #   typing-inspection
 typing-inspection==0.4.0
@@ -186,5 +125,3 @@ urllib3==2.3.0
     # via requests
 vtk==9.3.1
     # via pyvista
-watchdog==5.0.3
-    # via mkdocs
